apps/staging/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ingressClassName: traefik
  rules:
    - host: nextcloud.hectorprokos.com
      http:
        paths:
          - backend:
              service:
                name: nextcloud   # auto-created by the chart
                port:
                  number: 8080
            path: /
            pathType: Prefix
